src/test/deca/extension/context/invalid/bool_array_wrong_value.deca
// Problem of type : 2 is not a boolean

{
    boolean[] tabBool;
    tabBool = {0, 2, 1, 0};
}